# single-cell-curation

./: README.md  pyproject.toml
nextflow/: main.nf
nextflow/modules/: download.nf  run_bulk.nf  run_sc.nf
nextflow/profiles/: aws.config  local.config  slurm.config
single_cell_curation/: __init__.py  cli.py  config.py  pipeline.py
single_cell_curation/export/: __init__.py  report.py  writers.py
single_cell_curation/ingest/: __init__.py  geo.py  local.py  tcga.py  xena_cbioportal.py
single_cell_curation/processing/: __init__.py  bulk_processing.py  sc_processing.py
single_cell_curation/qc/: __init__.py  _cc_genes.py  ambient.py  cell_cycle.py  doublets.py  metrics.py
single_cell_curation/r_scripts/: cell_cycle.R  deseq2_vst.R  geoquery.R  soupx.R
single_cell_curation/utils/: __init__.py  io_helpers.py  r_runner.py
