[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsd-alphagenome-pipeline"
version = "0.1.0"
description = "LSD CRE selection + AlphaGenome mutagenesis validation pipeline"
requires-python = ">=3.10"
dependencies = [
    # AlphaGenome (Google DeepMind) — install separately per:
    # https://github.com/google-deepmind/alphagenome
    # pip install alphagenome
    "biopython>=1.83",          # FASTA extraction, sequence I/O
    "pybedtools>=0.9.1",        # BED interval arithmetic (wraps BEDTools binary)
    "MOODS-python>=1.9.4.1",    # Pure-Python motif scanner; replaces FIMO binary
    "tenacity>=8.2",            # Exponential back-off for AlphaGenome HTTP 429
    "click>=8.1",               # CLI framework
    "numpy>=1.26",              # Track aggregation arithmetic
    "pandas>=2.1",              # CSV export of fitness rankings
    "pyyaml>=6.0",              # Config file parsing
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "mypy>=1.8", "ruff>=0.4"]
sc = [
    "scanpy>=1.10",
    "anndata>=0.10",
    "scrublet>=0.2.3",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "leidenalg>=0.10",
    "igraph>=0.11",
    "umap-learn>=0.5",
    # R >= 4.0 + Rscript must be on PATH (system prereq, not pip-managed)
    # Required R packages: argparse, SoupX, GEOquery, Seurat, DESeq2
]

[project.scripts]
lsd-alpha = "lsd_alphagenome_pipeline.cli:main"
sc-curate  = "single_cell_curation.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
single_cell_curation = ["r_scripts/*.R"]

[tool.mypy]
python_version = "3.10"
strict = true
